# jrgochan.github.io

./: .gitignore  .wordlist.txt  404.html  Makefile  README.md  _config.yml  config.toml  custom_conf.py  hugo.toml  index.html  mkdocs.yml  pyproject.toml  readme.rst  requirements.txt  setup_venv.sh  sitemap.xml
.github/workflows/: gh-pages.yml  main.yml
.sphinx/: spellingcheck.yaml
acknowledgments/: index.html
appendix/: index.html
config/_default/: hugo.toml  languages.toml  markup.toml  menus.de.toml  menus.en.toml  menus.zh.toml  params.toml
content/: _index.md  todo.md
content/people/: _index.md
content/people/carolyn_connor/: _index.md
content/posts/: _index.md  my-first-post.md
content/reviews/: _index.md  paper2.md  paper3.md  paper4.md  paper5.md  random.md
content/software/: _index.md
content/software/scicat/: _index.md
content/software/scicat/documentation/: _index.md  coverage.html  dependencies.html  index.html  license.html  modules.html  overview.html  properties.html
content/software/scicat/documentation/classes/: AccessGroupService.html  Attachment.html  BuildOpenIdClient.html  CreateAttachmentDto.html  CreateCustomJwt.html  CreateDatablockDto.html  CreateDatasetDatablockDto.html  CreateDatasetDto.html  CreateDatasetOrigDatablockDto.html  CreateDerivedDatasetDto.html  CreateInitialDatasetDto.html  CreateInstrumentDto.html  CreateJobDto.html  CreateMeasurementPeriodDto.html  CreateOrigDatablockDto.html  CreatePolicyDto.html  CreateProposalDto.html  CreatePublishedDataDto.html  CreateRawDatasetDto.html  CreateRelationshipDto.html  CreateRoleDto.html  CreateSampleDto.html  CreateTechniqueDto.html  CreateUserDto.html  CreateUserIdentityDto.html  CreateUserJWT.html  CreateUserRoleDto.html  CreateUserSettingsDto.html  CredentialsDto.html  DataFile.html  DataFileDto.html  Datablock.html  DatasetClass.html  DatasetListDto.html  HistoryClass.html  InitialDataset.html  Instrument.html  Job.html  LifecycleClass.html  Logbook.html  (+38 more)
content/software/scicat/documentation/controllers/: AdminController.html  AuthController.html  DatasetsController.html  InstrumentsController.html  JobsController.html  LogbooksController.html  OrigDatablocksController.html  PoliciesController.html  ProposalsController.html  PublishedDataController.html  SamplesController.html  UserIdentitiesController.html  UsersController.html
content/software/scicat/documentation/guards/: PoliciesGuard.html  RolesGuard.html
content/software/scicat/documentation/injectables/: AccessGroupFromGraphQLApiService.html  AccessGroupFromMultipleProvidersService.html  AccessGroupFromPayloadService.html  AccessGroupFromStaticValuesService.html  (+38 more)
content/things/: _index.md  random.md
content/things/travel/: _index.md
content/things/travel/2022/: _index.md
content/things/travel/2023/: _index.md
content/things/travel/ess/: _index.md
content/travel/: _index.md
content/travel/2023/: _index.md
content/travel/2023/fair_facilities/: _index.md
content/travel/2023/imca_cat/: _index.md
contributing/: index.html
docs/: .buildinfo  index.html  objects.inv  searchindex.js  test.md
docs/.doctrees/: environment.pickle  index.doctree  readme.doctree
docs/404/: index.html
docs/acknowledgments/: index.md
docs/appendix/: index.md
docs/contributing/: index.md
docs/faqs/: index.md
docs/genindex/: index.html
docs/getting-started/: configuration.md  index.md  quick-start.md
docs/glossary/: index.md
docs/how-to/: diagram.md  diagrams.md  document.md  index.md
docs/legal/: index.md
docs/notes/: index.md
docs/notes/jrgochan/: index.md  scratch.md
docs/notes/jrgochan/idea-one/: index.md  thought-one.md  thought-two.md
docs/notes/zesty/: index.md  scratch.md
docs/notes/zesty/idea-one/: index.md  thought-one.md  thought-two.md
docs/readme/: index.html
docs/release-notes/: index.md
docs/search/: index.html
docs/stylesheets/: extra.css
docs/support/: index.md
docs/travel/: index.md
docs/travel/2023/: .meta.yml  index.md
docs/travel/2023/ess-dmsc/: index.md
docs/travel/2023/fair-facilities/: index.md
docs/travel/2023/imca-cat/: index.md
docs/troubleshooting/: index.md
faqs/: index.html
getting-started/: index.html
getting-started/configuration/: index.html
getting-started/quick-start/: index.html
glossary/: index.html
how-to/: index.html
how-to/diagram/: index.html
how-to/diagrams/: index.html
how-to/document/: index.html
layouts/partials/: footer.html  logo.html  tag-cloud.html
legal/: index.html
notes/: index.html
notes/jrgochan/: index.html
notes/jrgochan/idea-one/: index.html
notes/jrgochan/idea-one/thought-one/: index.html
notes/jrgochan/idea-one/thought-two/: index.html
notes/jrgochan/scratch/: index.html
notes/zesty/: index.html
notes/zesty/idea-one/: index.html
notes/zesty/idea-one/thought-one/: index.html
notes/zesty/idea-one/thought-two/: index.html
notes/zesty/scratch/: index.html
release-notes/: index.html
search/: search_index.json
support/: index.html
travel/: index.html
travel/2022/_index/: index.html
travel/2023/: index.html
travel/2023/ess-dmsc/: index.html
travel/2023/ess-dmsc/conversations/: index.html
travel/2023/ess-dmsc/days/: index.html
travel/2023/ess-dmsc/ideas/: index.html
travel/2023/ess-dmsc/links/: index.html
travel/2023/ess-dmsc/people/: index.html
travel/2023/ess-dmsc/posters/: index.html
travel/2023/ess-dmsc/tips/: index.html
travel/2023/fair-facilities/: index.html
travel/2023/fair-facilities/days/: index.html
travel/2023/imca-cat/: index.html
travel/2023/imca-cat/days/: index.html
troubleshooting/: index.html
(+127 files in other folders)
